...
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/sort_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bg_yellow"
            android:clickable="true"
            android:focusable="true"
            android:text="Sort"
...
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white">
        </TextView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/bg_yellow"
...
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:textColor="@color/black"
            android:onClick="dateASCTapped"
            android:id="@+id/dateASCTapped"
            android:text="Date" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
...
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:textColor="@color/black"
            android:id="@+id/makeASCTapped"
            android:onClick="makeASCTapped"
            android:text="Make" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:textColor="@color/black"
            android:id="@+id/valueASCTapped"
            android:onClick="valueASCTapped"
            android:text="Value" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="dateDESTapped"
            android:id="@+id/dateDESTapped"
            android:text="Date"
            android:textColor="@color/black" />

        <Button
            android:layout_width="0dp"
...

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="makeDESTapped"
            android:id="@+id/makeDESTapped"
            android:text="Make"
            android:textColor="@color/black" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="valueDESTapped"
            android:id="@+id/valueDESTapped"
            android:text="Value"
            android:textColor="@color/black" />

        <Button
            android:layout_width="0dp"
...
            android:text="Tags"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/total_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="Add Tag" />

        <!-- Delete Button -->
        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
...
