...
        android:icon="@drawable/ic_filter" />
    <item
        android:id="@+id/navigation_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/navigation_logout"
        android:title="@string/Profile"
        android:icon="@drawable/ic_logout"/>
</menu>
